# actors-rust

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md  REMOTE_ACTORS_GUIDE.md
examples/: group_workers.rs  ping_pong.rs  timer_example.rs
examples/reject_example/: receiver.rs  sender.rs
examples/remote_ping_pong/: ping.rs  pong.rs
examples/remote_rust_python/: rust_ping.rs  rust_pong.rs
src/: actor.rs  group.rs  lib.rs  manager.rs  message.rs  messages.rs  remote.rs  serialization.rs  timer.rs
