[package]
name = "actors"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A lightweight, high-performance actor framework for building concurrent systems in Rust"
authors = ["Vincent Maciejewski <mayeski@gmail.com>"]
repository = "https://github.com/m2tech/actors-rust"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeromq = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"

[[example]]
name = "group_workers"
path = "examples/group_workers.rs"

[[example]]
name = "remote_ping"
path = "examples/remote_ping_pong/ping.rs"

[[example]]
name = "remote_pong"
path = "examples/remote_ping_pong/pong.rs"

[[example]]
name = "rust_ping"
path = "examples/remote_rust_python/rust_ping.rs"

[[example]]
name = "rust_pong"
path = "examples/remote_rust_python/rust_pong.rs"

[[example]]
name = "reject_sender"
path = "examples/reject_example/sender.rs"

[[example]]
name = "reject_receiver"
path = "examples/reject_example/receiver.rs"

[[example]]
name = "timer_example"
path = "examples/timer_example.rs"
